[gd_scene load_steps=4 format=3 uid="uid://bldeapu4qf5vg"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_ppw0l"]
[ext_resource type="Script" uid="uid://ldd3desetd6r" path="res://ability_info.gd" id="2_g68wf"]
[ext_resource type="PackedScene" uid="uid://rcf054woe6m1" path="res://status_effects/StatusIcon.tscn" id="3_tp40i"]

[node name="AbilityInfo" type="PanelContainer" node_paths=PackedStringArray("name_label", "level_label", "type_label", "damage_label", "cooldown_label", "range_label", "pierce_label", "income_label", "level_up_button", "statuses_container", "status_icons_container", "gray_on_locked")]
custom_minimum_size = Vector2(520, 0)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ppw0l")
script = ExtResource("2_g68wf")
name_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/NameLabel")
level_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/LevelLabel")
type_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1/TypeLabel")
damage_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1/DamageLabel")
cooldown_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1/CooldownLabel")
range_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2/RangeLabel")
pierce_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2/PierceLabel")
income_label = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2/IncomeLabel")
level_up_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton")
statuses_container = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer")
status_icons_container = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer/StatusIconsContainer")
gray_on_locked = [NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1"), NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2"), NodePath("MarginContainer/VBoxContainer/HBoxContainer2"), NodePath("MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TextTitle"
text = "I'm Gonna ****ing Shoot Up A W*lm*rt"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"TextSmall"
text = "Lv.0"
vertical_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsContainer1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "Type"

[node name="DamageLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"TextSmall"
bbcode_enabled = true
text = "Damage: 1->[color=lime_green]2[/color]"
fit_content = true

[node name="CooldownLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
bbcode_enabled = true
text = "Cooldown"
fit_content = true

[node name="StatsContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RangeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
bbcode_enabled = true
text = "Range"
fit_content = true

[node name="PierceLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
bbcode_enabled = true
text = "Pierce"
fit_content = true

[node name="IncomeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatsContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_ppw0l")
theme_type_variation = &"TextSmall"
bbcode_enabled = true
text = "Income"
fit_content = true

[node name="StatusesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer"]
layout_mode = 2
theme_type_variation = &"TextSmall"
text = "Statuses"

[node name="StatusIconsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
columns = 2

[node name="StatusIcon" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer/StatusIconsContainer" instance=ExtResource("3_tp40i")]
layout_mode = 2

[node name="StatusIcon2" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer/StatusIconsContainer" instance=ExtResource("3_tp40i")]
layout_mode = 2

[node name="StatusIcon3" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/StatusesContainer/StatusIconsContainer" instance=ExtResource("3_tp40i")]
layout_mode = 2

[node name="LevelUpButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "+"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
